# uv-git-debug-a

./: README.md  main.py  pyproject.toml
src/uv_git_debug_a/: __init__.py
